--- a/test-project/src/components/Hamburger/Hamburger.css
+++ b/test-project/src/components/Hamburger/Hamburger.css
@@ -10,17 +10,23 @@
     display: block;
     margin: 10px auto;
     transition: all 0.3s ease-in-out;
-  }
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+}
   .b_hamburger {
+    right: 10%;
     display: block;
     position: absolute;
-    /* left: 85%; */
-    left: calc(100% - 115px);
     background-color: inherit;
     margin: 20px 0;
     width: 50px;
     height: 50px;
     z-index: 2;
+  }
+  .b_hamburger.is_active {
+    background-color: white;
   }
   .b_hamburger:hover {
     cursor: pointer;
@@ -31,9 +37,11 @@
 
   .b_hamburger.is_active .line1 {
     transform: translateY(13px) rotate(45deg);
+    background-color: #1C1C1E;
   }
 
   .b_hamburger.is_active .line3 {
     transform: translateY(-13px) rotate(-45deg);
+    background-color: #1C1C1E;
   }
 }
