--- a/test-project/src/components/Main/Main.module.css
+++ b/test-project/src/components/Main/Main.module.css
@@ -3,35 +3,28 @@
 	src: url(../../assets/fonts/Montserrat.ttf); 
 }
 .main__block {
-  width: 100%;
+  margin-top: 80px;
+  height: 150vh;
   padding-top: 32px;
   padding-left: 32px;
+  grid-column: 2 / 3;
   border: 2px solid blueviolet;
 }
-.main__title {
-    font-family: 'Montserrat';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 31.69px;
-    color: #1C1C1E;
+@media (max-width: 768px) {
+  .main__block {
+    grid-column: 1 / 2;
+    width: 100%;
+    padding-top: 16px;
+    padding-left: 16px;
+  }
 }
-.main__subtitle {
-  margin-top: 16px;
-  font-family: 'Montserrat';
-  font-style: normal; 
-  font-weight: 500px;
-  font-size: 20px;
-  line-height: 24px;
-  color: #1C1C1E;
-}
-.main__input_button_container {
-  margin-top: 24px;
-  display: flex;
-  gap: 24px;
-}
-.main__btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 16px;
+@media (max-width: 320px) {
+  .main__block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding-top: 10px;
+    padding-left: 10px;
+  }
 }
