--- a/test-project/src/components/Address/Address.module.css
+++ b/test-project/src/components/Address/Address.module.css
@@ -1,30 +1,44 @@
 @font-face {
-	font-family: 'Montserrat'; 
-	src: url(../../assets/fonts/Montserrat.ttf); 
+  font-family: 'Montserrat-500';
+  src: url(../../assets/fonts/Montserrat-Medium.ttf);
+}
+@font-face {
+  font-family: 'Montserrat-700';
+  src: url(../../assets/fonts/Montserrat-Bold.ttf);
 }
 .main__block {
   margin-top: 80px;
-  height: 150vh;
   padding-top: 32px;
   padding-left: 32px;
   grid-column: 2 / 3;
-  border: 2px solid blueviolet;
+  max-height: 100vh;
+}
+.main_block__address_block::-webkit-scrollbar {
+  width: 12px;
+}
+.main_block__address_block::-webkit-scrollbar-track {
+  background: white;
+}
+.main_block__address_block::-webkit-scrollbar-thumb {
+  background-color: #4F27BF;
+  border-radius: 20px;
+  border: 3px solid white;
 }
 .main__title {
-    font-family: 'Montserrat';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 31.69px;
-    color: #1C1C1E;
+  font-family: 'Montserrat-700';
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31.69px;
+  color: #1c1c1e;
 }
 .main__subtitle {
   margin-top: 16px;
-  font-family: 'Montserrat';
-  font-style: normal; 
+  font-family: 'Montserrat-500';
+  font-style: normal;
   font-weight: 500px;
   font-size: 20px;
   line-height: 24px;
-  color: #1C1C1E;
+  color: #1c1c1e;
 }
 .main__input_button_container {
   margin-top: 24px;
@@ -40,6 +54,23 @@
 .main__seach_icon {
   width: 32px;
   height: 32px;
+}
+.main_block__address_block {
+  display: flex;
+  flex-direction: column;
+  margin-top: 32px;
+  padding: 24px;
+  background: #ffffff;
+  box-shadow: 0px 2px 8px rgba(2, 0, 97, 0.25);
+  border-radius: 10px;
+}
+.main_block__address_block__title {
+  font-family: 'Montserrat-700';
+  font-style: normal;
+  font-weight: 500px;
+  font-size: 20px;
+  line-height: 24px;
+  margin-bottom: 16px;
 }
 @media (max-width: 768px) {
   .main__block {
