--- a/test-project/src/components/Header/Header.module.css
+++ b/test-project/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'Montserrat';
-  src: url(../../assets/fonts/Montserrat.ttf);
+	font-family: 'Montserrat-700'; 
+	src: url(../../assets/fonts/Montserrat-Bold.ttf); 
 }
 
 .header__block {
@@ -13,8 +13,6 @@
   height: 80px;
   padding: 0 32px;
   align-items: center;
-  /* grid-column: 1 / 3;
-  grid-row: 1 / 2; */
 }
 .header__logo_img,
 .header__personal_data_img {
@@ -30,7 +28,7 @@
 }
 .header__logo_text,
 .header__personal_data_text {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat-700';
   font-weight: 700;
   font-size: 20px;
   line-height: 24.38px;
