--- a/test-project/src/components/Menu/Menu.css
+++ b/test-project/src/components/Menu/Menu.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'Montserrat';
-  src: url(../../assets/fonts/Montserrat.ttf);
+	font-family: 'Montserrat-700'; 
+	src: url(../../assets/fonts/Montserrat-Bold.ttf); 
 }
 .menu__block {
   margin-top: 80px;
@@ -8,13 +8,31 @@
   padding-top: 24px;
   grid-column: 1 / 2;
   grid-row: 1 / 2;
-  height: 944px;
+  height: 100vh;
+  max-height: 944px;
   background: rgba(255, 255, 255, 0.05);
   box-shadow: 0px 0px 5px rgba(2, 0, 96, 0.25);
+  overflow: auto;
+}
+.menu__block::-webkit-scrollbar {
+  width: 12px;
+}
+.menu__block::-webkit-scrollbar-track {
+  background: white;
+}
+.menu__block::-webkit-scrollbar-thumb {
+  background-color: #4F27BF;
+  border-radius: 20px;
+  border: 3px solid white;
+}
+.main__title {
+  font-family: 'Montserrat-700';
+  font-size: 26px;
+  line-height: 31.69px;
+  color: #1C1C1E;
 }
 .menu__title {
-  font-family: 'Montserrat';
-  font-weight: 700;
+  font-family: 'Montserrat-700';
   font-size: 20px;
   line-height: 24.38px;
   color: #1c1c1e;
