--- a/test-project/src/components/NavLink/NavLink.module.css
+++ b/test-project/src/components/NavLink/NavLink.module.css
@@ -1,6 +1,6 @@
 @font-face {
-	font-family: 'Montserrat'; 
-	src: url(../../assets/fonts/Montserrat.ttf); 
+	font-family: 'Montserrat-600'; 
+	src: url(../../assets/fonts/Montserrat-SemiBold.ttf); 
 }
 .none {
     display: none;
@@ -18,8 +18,7 @@
     height: 32px;
 }
 .nav__nav_link_text {
-    font-family: 'Montserrat';
-    font-weight: 600;
+    font-family: 'Montserrat-600';
     font-size: 20px;
     line-height: 24.38px;
     color: #1C1C1E;
