--- a/test-project/src/components/UI/UButton/UButton.module.css
+++ b/test-project/src/components/UI/UButton/UButton.module.css
@@ -1,6 +1,6 @@
 @font-face {
-	font-family: 'Montserrat'; 
-	src: url(../../../assets/fonts/Montserrat.ttf); 
+	font-family: 'Montserrat-700'; 
+	src: url(../../../assets/fonts/Montserrat-Bold.ttf); 
 }
 .myBtn {
   border: none;
@@ -14,7 +14,7 @@
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
   color: #FFFFFF;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat-700';
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
